Adding a small patch from ASTERISK-20098 for testing
git-svn-id: https://origsvn.digium.com/svn/asterisk/team/oej/teapot-1.8@402275 65c4cc65-6c06-0410-ace0-fbb531ad65f3

--- a/configs/rtp.conf.sample
+++ b/configs/rtp.conf.sample
@@ -3,6 +3,10 @@
 ;
 [general]
 ;
+; Set to off to always disable p2pbridge
+;
+p2pbridge = TRUE
+
 ; RTP start and RTP end configure start and end addresses
 ;
 ; Defaults are rtpstart=5000 and rtpend=31000
